examples/test/testpolicy13613.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13613
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key7: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value33
          key41: value21
          key16: value23
      podSelector:
        matchLabels:
          key15: value39
